# pgrass-jobs

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  dev.sh  docker-compose.yml  example-settings.toml  pyproject.toml  requirements.txt  settings.toml  sonar-project.properties  start_job.py  start_sched.py  tox.ini
.github/workflows/: pysec.yml  python-test.yml
app/: config.py  db.py  fuctions.py  loadfile.py  loadpoint.py  loadpoint_new.py  sentinel2.py  sentinel2_new.py
app/model/: functions.py  models.py  point.py
app/sattelite/: sentinel2.py
dev/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  env-example
dev/data/: settings.toml
tests/: test_function_is_tif.py  test_model_functions.py
