[tool.poetry]
name = "pgrass-jobs"
version = "0.1.0"
description = ""
authors = ["Jairo Matos da Rocha <jairo@discente.ufg.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.8"
rasterio = "1.3a4"
pyproj = "^3.3.1"
geopandas = "^0.10.2"
pystac-client = "0.3.2"
pydantic = "^1.9.0"
loguru = "^0.6.0"
motor = "<3.0.0"
Rtree = "^1.0.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
web-pdb = "^1.5.7"
blue = "^0.9.0"
prospector = "^1.7.7"
pytest = "^7.1.2"
pip-audit = "^2.3.4"
isort = "^5.10.1"
pyinstrument = "^4.1.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
